--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,6 @@
 repository:
-  name: template.action
-  description: Basic template repo for Github actions
+  name: action.tag-deletion-cleanup
+  description: Resets branch back to previous tag (where exists) when a release tag is deleted
   topics: action
   private: false
   has_issues: false
