--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
     description: List of branch patterns to ignore when cleaning up trailing branches
     required: false
     default: 'hotfix/* feature/*'
+outputs:
+  cleaned:
+    description: list of cleaned up branched (space separated)
 
 
 # for additional options, see: https://help.github.com/en/articles/metadata-syntax-for-github-actions
